[tool.poetry]
name = "run-body"
version = "0.1.0"
description = ""
authors = ["Hamzeh Pourmahdi <hpourmahdi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.3.0"
pygame = "^2.6.0"
buildozer = "^1.5.0"
plyer = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
